@@ -7,6 +7,8 @@
  - Fix parsing HTTP bindings when there are no message elements (#185)
  - Fix deserializing RPC responses (#219
  - Add support for SOAP 1.2 Fault subcodes (#210, vashek)
+ - Don't alter the _soapheaders elements during rendering, instead create a 
+   deepcopy first. (#188)
 
 
 0.18.1 (2016-09-23)
